[gd_scene load_steps=5 format=3 uid="uid://k5k6bvgrmjm4"]

[ext_resource type="Script" path="res://scenes/Game_Over.gd" id="1_evknk"]
[ext_resource type="StyleBox" uid="uid://c3n5vps8otjg1" path="res://assets/UI/style_box3.tres" id="3_v8jhm"]
[ext_resource type="StyleBox" uid="uid://dehb46trjw82d" path="res://assets/UI/Stylebox_1.tres" id="3_vn8s0"]
[ext_resource type="StyleBox" uid="uid://ceb2r5oj6stcq" path="res://assets/UI/style_box2.tres" id="4_itsms"]

[node name="GameOverScreen" type="Node2D"]
script = ExtResource("1_evknk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 385.0
offset_top = 232.0
offset_right = 695.0
offset_bottom = 480.0
theme_override_styles/panel = ExtResource("3_vn8s0")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="Game Over" type="Label" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Game Over!"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Round" type="Label" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Round:"

[node name="RoundCount" type="Label" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "1"
horizontal_alignment = 1

[node name="Attempts" type="Label" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Total Doors Opened:"

[node name="AttemptsCount" type="Label" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "10"
horizontal_alignment = 1

[node name="Traps" type="Label" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Total Traps Sprung:"

[node name="TrapsCount" type="Label" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "50"
horizontal_alignment = 1

[node name="Time" type="Label" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Total Time Elapsed:"

[node name="TimeCount" type="Label" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "1:51"
horizontal_alignment = 1

[node name="Container" type="Container" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("3_v8jhm")
theme_override_styles/hover = ExtResource("3_v8jhm")
theme_override_styles/pressed = ExtResource("4_itsms")
text = "Main Menu"

[node name="SFX_Player" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
